# libgdata

./: .gitlab-ci.yml  .travis.yml  ChangeLog  HACKING  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  configure.in  git.mk  libgdata.doap  libgdata.pc.in  meson.build  meson_options.txt
demos/: meson.build
demos/calendar/: calendar-cli.c  meson.build
demos/docs-list/: docs-list.c  meson.build
demos/docs-property/: docs-property.c
demos/freebase/: freebase-cli.c
demos/scrapbook/: meson.build  scrap.c  scrapbook.c  scrapbook.h
demos/tasks/: meson.build  tasks-cli.c
demos/youtube/: meson.build  youtube-cli.c
docs/reference/: Makefile.am  cancellation.dia  data-flow.dia  gdata-docs.xml  gdata-overview.xml  gdata-running.xml  gdata-sections.txt  gdata-sections.txt.in  gtkdocentities.ent.in  meson.build  structure.dia
docs/reference/xml/: meson.build
gdata/: GData-0.0.metadata  Makefile.am  gdata-access-handler.c  gdata-access-handler.h  gdata-access-rule.c  gdata-access-rule.h  gdata-authorization-domain.c  gdata-authorization-domain.h  gdata-authorizer.c  gdata-authorizer.h  gdata-batch-feed.c  gdata-batch-feed.h  gdata-batch-operation.c  gdata-batch-operation.h  gdata-batch-private.h  gdata-batchable.c  gdata-batchable.h  gdata-buffer.c  gdata-buffer.h  gdata-client-login-authorizer.c  gdata-client-login-authorizer.h  gdata-comment.c  gdata-comment.h  gdata-commentable.c  gdata-commentable.h  gdata-comparable.c  gdata-comparable.h  gdata-core.symbols  gdata-download-stream.c  gdata-download-stream.h  gdata-entry.c  gdata-entry.h  gdata-enums.c.template  gdata-enums.h.template  gdata-feed.c  gdata-feed.h  gdata-goa-authorizer.c  gdata-goa-authorizer.h  gdata-goa.symbols  gdata-oauth1-authorizer.c  (+23 more)
gdata/app/: gdata-app-categories.c  gdata-app-categories.h  meson.build
gdata/atom/: Makefile.am  gdata-author.c  gdata-author.h  gdata-category.c  gdata-category.h  gdata-generator.c  gdata-generator.h  gdata-link.c  gdata-link.h  meson.build
gdata/exif/: Makefile.am  gdata-exif-tags.c  gdata-exif-tags.h  meson.build
gdata/gcontact/: gdata-gcontact-calendar.c  gdata-gcontact-calendar.h  gdata-gcontact-event.c  gdata-gcontact-event.h  gdata-gcontact-external-id.c  gdata-gcontact-external-id.h  gdata-gcontact-jot.c  gdata-gcontact-jot.h  gdata-gcontact-language.c  gdata-gcontact-language.h  gdata-gcontact-relation.c  gdata-gcontact-relation.h  gdata-gcontact-website.c  gdata-gcontact-website.h  meson.build
gdata/gd/: Makefile.am  gdata-gd-email-address.c  gdata-gd-email-address.h  gdata-gd-feed-link.c  gdata-gd-feed-link.h  gdata-gd-im-address.c  gdata-gd-im-address.h  gdata-gd-name.c  gdata-gd-name.h  gdata-gd-organization.c  gdata-gd-organization.h  gdata-gd-phone-number.c  gdata-gd-phone-number.h  gdata-gd-postal-address.c  gdata-gd-postal-address.h  gdata-gd-reminder.c  gdata-gd-reminder.h  gdata-gd-when.c  gdata-gd-when.h  gdata-gd-where.c  gdata-gd-where.h  gdata-gd-who.c  gdata-gd-who.h  meson.build
gdata/georss/: Makefile.am  gdata-georss-where.c  gdata-georss-where.h  meson.build
gdata/media/: Makefile.am  gdata-media-category.c  gdata-media-category.h  gdata-media-content.c  gdata-media-content.h  gdata-media-credit.c  gdata-media-credit.h  gdata-media-enums.c.template  gdata-media-enums.h.template  gdata-media-group.c  gdata-media-group.h  gdata-media-thumbnail.c  gdata-media-thumbnail.h  meson.build
gdata/services/: Makefile.am  meson.build
gdata/services/calendar/: Makefile.am  gdata-calendar-access-rule.c  gdata-calendar-access-rule.h  gdata-calendar-calendar.c  gdata-calendar-calendar.h  gdata-calendar-event.c  gdata-calendar-event.h  gdata-calendar-feed.c  gdata-calendar-feed.h  gdata-calendar-query.c  gdata-calendar-query.h  gdata-calendar-service.c  gdata-calendar-service.h  meson.build
gdata/services/contacts/: Makefile.am  gdata-contacts-contact.c  gdata-contacts-contact.h  gdata-contacts-group.c  gdata-contacts-group.h  gdata-contacts-query.c  gdata-contacts-query.h  gdata-contacts-service.c  gdata-contacts-service.h  meson.build
gdata/services/documents/: Makefile.am  gdata-documents-access-rule.c  gdata-documents-access-rule.h  gdata-documents-document.c  gdata-documents-document.h  gdata-documents-drawing.c  gdata-documents-drawing.h  gdata-documents-drive-query.c  gdata-documents-drive-query.h  gdata-documents-drive.c  gdata-documents-drive.h  gdata-documents-entry-private.h  gdata-documents-entry.c  gdata-documents-entry.h  gdata-documents-enums.c.template  gdata-documents-enums.h.template  gdata-documents-feed.c  gdata-documents-feed.h  gdata-documents-folder.c  gdata-documents-folder.h  gdata-documents-metadata.c  gdata-documents-metadata.h  gdata-documents-pdf.c  gdata-documents-pdf.h  gdata-documents-presentation.c  gdata-documents-presentation.h  gdata-documents-property.c  gdata-documents-property.h  gdata-documents-query.c  gdata-documents-query.h  gdata-documents-service.c  gdata-documents-service.h  gdata-documents-spreadsheet.c  gdata-documents-spreadsheet.h  gdata-documents-text.c  gdata-documents-text.h  gdata-documents-upload-query.c  gdata-documents-upload-query.h  gdata-documents-utils.c  gdata-documents-utils.h  (+1 more)
gdata/services/freebase/: gdata-freebase-enums.c.template  gdata-freebase-enums.h.template  gdata-freebase-query.c  gdata-freebase-query.h  gdata-freebase-result.c  gdata-freebase-result.h  gdata-freebase-search-query.c  gdata-freebase-search-query.h  gdata-freebase-search-result.c  gdata-freebase-search-result.h  gdata-freebase-service.c  gdata-freebase-service.h  meson.build  (+4 more)
gdata/tests/: Makefile.am  authorization.c  buffer.c  calendar.c  callgrind  cert.pem  client-login-authorizer.c  common.c  common.h  contacts.c  documents.c  freebase.c  gdata-dummy-authorizer.c  gdata-dummy-authorizer.h  general.c  key.pem  massif  memcheck  memory.c  meson.build  mock-resolver.c  mock-resolver.h  mock-server.c  mock-server.h  oauth1-authorizer.c  oauth2-authorizer.c  perf.c  picasaweb.c  streams.c  tasks-task.schema.json  tasks-tasklist.schema.json  tasks.c  template.test.in  youtube.c
(+428 files in other folders)
